<resources>
    <string name="app_name">MessengerApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="username">username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chats">Chats</string>

    <string name="account_settings">Account settings</string>
    <string name="search">Search</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="welcome">Welcome</string>
    <string name="log_out">Log out</string>
    <string name="user_name">user name</string>
    <string name="search_users_here">Search users here...</string>
    <string name="seen">seen</string>
    <string name="write_message_here">write message here...</string>
    <string name="testing_msg">testing msg</string>
    <string name="send_message">Send Message</string>
</resources>